--- a/config/database.yml
+++ b/config/database.yml
@@ -85,5 +85,5 @@ test:
 production:
   <<: *default
   database: blog_production
-  username: blog_admin
+  username: blog
   password: <%= ENV['BLOG_DATABASE_PASSWORD'] %>
