--- a/config/database.yml
+++ b/config/database.yml
@@ -84,6 +84,6 @@ test:
 #
 production:
   <<: *default
-  database: blog_production
-  username: blog
+  database: blog_prod
+  username: blog_admin1
   password: <%= ENV['BLOG_DATABASE_PASSWORD'] %>
